--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/sanjayk1801/myreddit-server#readme",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.26.6",
     "@types/node": "^16.3.1",
+    "@types/redis": "^2.8.31",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -32,11 +36,14 @@
     "@mikro-orm/core": "^4.5.7",
     "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/postgresql": "^4.5.7",
-    "apollo-server-express": "^3.0.0",
+    "apollo-server-express": "^3.0.1",
     "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
