--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@mikro-orm/core": "^4.5.7",
     "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/postgresql": "^4.5.7",
+    "@types/cors": "^2.8.12",
     "apollo-server-express": "^3.0.1",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
