--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start-ts": "ts-node src/index.ts"
+    "start-ts": "ts-node src/index.ts",
+    "create-migrations": "mikro-orm migration:create"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,9 @@
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.26.6",
     "@types/node": "^16.3.1",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.31",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -44,10 +47,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
+    "ioredis": "^4.27.6",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
-    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
