--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.34",
     "uuid": "^8.3.2"
   },
   "mikro-orm": {
