--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start-ts": "ts-node src/index.ts",
-    "create-migrations": "mikro-orm migration:create"
+    "start-ts": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.26.6",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^16.3.1",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.31",
@@ -35,10 +35,6 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.7",
-    "@mikro-orm/core": "^4.5.7",
-    "@mikro-orm/migrations": "^4.5.7",
-    "@mikro-orm/postgresql": "^4.5.7",
     "@types/cors": "^2.8.12",
     "apollo-server-express": "^3.0.1",
     "argon2": "^0.28.2",
@@ -48,6 +44,7 @@
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "ioredis": "^4.27.6",
+    "lodash": "^4.17.21",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
